<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tan_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_derrumbes"
            style="@style/CategoryStyle"
            android:background="@color/category_numbers"
            android:text="@string/category_derrumbes" />

        <TextView
            android:id="@+id/tv_inundaciones"
            style="@style/CategoryStyle"
            android:background="@color/category_family"
            android:text="@string/category_inundaciones" />

        <TextView
            android:id="@+id/tv_huracanes"
            style="@style/CategoryStyle"
            android:background="@color/category_colors"
            android:text="@string/category_huracanes" />

        <TextView
            android:id="@+id/tv_terremotos"
            style="@style/CategoryStyle"
            android:background="@color/category_phrases"
            android:text="@string/category_terremotos" />

        <TextView
            android:id="@+id/tv_incendios"
            style="@style/CategoryStyle"
            android:background="@color/category_numbers"
            android:text="@string/category_incendios" />

        <TextView
            android:id="@+id/tv_volcanes"
            style="@style/CategoryStyle"
            android:background="@color/category_family"
            android:text="@string/category_volcanes" />

        <TextView
            android:id="@+id/tv_tsunamis"
            style="@style/CategoryStyle"
            android:background="@color/category_colors"
            android:text="@string/category_tsunamis" />

        <TextView
            android:id="@+id/tv_otrosEventos"
            style="@style/CategoryStyle"
            android:background="@color/category_phrases"
            android:text="@string/category_otros" />

    </LinearLayout>
</ScrollView>
